# datameetpdf

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg
datameetpdf/core/: report.py
datameetpdf/template/: basic_html.py
datameetpdf/util/: html.py
src/datameetpdf/core/: report.py
src/datameetpdf/template/: basic.css  basic_html.py
tests/: test_report.py
