[metadata]
name = datameetpdf
version = 0.0.1
author = Jeremy Wang
author_email = j.wang@quantransform.co.uk
description = Create PDF by using selected different data outputs
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/quantransform/datameetpdf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    wkhtmltopdf==0.2
    pdfkit==1.0.0
    pandas>=1.0.0
    numpy>=1.0.0

[options.packages.find]
where = src
